--- a/communication_prompts/08_data_to_insight_analyst.prompt.yaml
+++ b/communication_prompts/08_data_to_insight_analyst.prompt.yaml
@@ -16,5 +16,21 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      date,sales
+      Jan,10
+      Feb,20
+      Mar,30
+    expected: |-
+      Question 1: Are there promotions?
+      Question 2: Which region?
+      Question 3: Any returns?
+      Insight 1: Sales rise each month – line chart date vs sales.
+      Insight 2: Highest jump from Feb to Mar – bar chart month vs growth.
+      Insight 3: No declines detected – table month vs sales.
+      Follow-up experiment: test weekend promotion.
+evaluators:
+  - name: Output proposes follow-up experiment
+    string:
+      contains: 'Follow-up experiment'
