--- a/communication_prompts/17_rubber_duck_debugger.prompt.yaml
+++ b/communication_prompts/17_rubber_duck_debugger.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Rubber Duck Debugger
-description: Guide developers through self-explanation to uncover bugs before 
+description: Guide developers through self-explanation to uncover bugs before
   providing fixes.
 model: gpt-4
 modelParameters:
@@ -21,5 +21,21 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      for i in range(5):
+          print(i)
+      # nothing prints
+    expected: |-
+      Why do you expect output?
+      Did you run the file?
+      Diagnosis: loop unused.
+      ```python
+      for i in range(5):
+          print(i)
+      ```
+      Tip: run script after saving.
+evaluators:
+  - name: Output gives diagnosis
+    string:
+      contains: 'Diagnosis'
