--- a/codex_prompts/01_project_init_codex.prompt.yaml
+++ b/codex_prompts/01_project_init_codex.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Project Init & Skeleton (OpenAI Codex)
-description: Spin up a brand-new repository with a minimal but runnable 
+description: Spin up a brand-new repository with a minimal but runnable
   skeleton, plus a one-command local dev experience.
 model: gpt-4
 modelParameters:
@@ -24,5 +24,14 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      project_name: example-app
+      language: python
+      package_manager: pip
+      monorepo: no
+    expected: Project Initialized -
+evaluators:
+  - name: Output starts with 'Project Initialized -'
+    string:
+      startsWith: 'Project Initialized -'
