--- a/codex_prompts/02_codebase_testing_plan.prompt.yaml
+++ b/codex_prompts/02_codebase_testing_plan.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Codebase Testing Plan
-description: Generate a detailed analysis of an existing codebase **and** 
+description: Generate a detailed analysis of an existing codebase **and**
   produce a step-by-step plan to introduce or improve automated testing, aligned
   with project priorities, team skills, and CI/CD constraints.
 model: gpt-4
@@ -77,5 +77,13 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      repo_path: /tmp/repo
+      languages: [python]
+      team_size: 5
+    expected: Testing Plan -
+evaluators:
+  - name: Output starts with 'Testing Plan -'
+    string:
+      startsWith: 'Testing Plan -'
