--- a/codex_prompts/03_tooling_and_quality_codex.prompt.yaml
+++ b/codex_prompts/03_tooling_and_quality_codex.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Tooling, Linting & Quality Gates (OpenAI Codex)
-description: Add opinionated linters, formatters, type-checkers, commit hooks, 
+description: Add opinionated linters, formatters, type-checkers, commit hooks,
   and test frameworks so the repo “fails fast” on bad code.
 model: gpt-4
 modelParameters:
@@ -29,5 +29,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      language: javascript
+    expected: Tooling Added -
+evaluators:
+  - name: Output starts with 'Tooling Added -'
+    string:
+      startsWith: 'Tooling Added -'
