--- a/codex_prompts/05_docs_and_onboarding_codex.prompt.yaml
+++ b/codex_prompts/05_docs_and_onboarding_codex.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Documentation & Developer Onboarding (OpenAI Codex)
-description: Create living docs that cut time-to-first-PR and capture 
+description: Create living docs that cut time-to-first-PR and capture
   architectural decisions.
 model: gpt-4
 modelParameters:
@@ -30,5 +30,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      focus: README
+    expected: Docs Plan -
+evaluators:
+  - name: Output starts with 'Docs Plan -'
+    string:
+      startsWith: 'Docs Plan -'
