--- a/codex_prompts/07_architecture_flow_codex.prompt.yaml
+++ b/codex_prompts/07_architecture_flow_codex.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Architecture Flow Q&A (OpenAI Codex)
-description: Trace a request from client endpoint to database and document the 
+description: Trace a request from client endpoint to database and document the
   flow with a Mermaid diagram.
 model: gpt-4
 modelParameters:
@@ -21,5 +21,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      entry_point: /api/users
+    expected: Architecture Flow -
+evaluators:
+  - name: Output starts with 'Architecture Flow -'
+    string:
+      startsWith: 'Architecture Flow -'
