--- a/clinical_safety_prompts/03_post_market_safety_signal_trending.prompt.yaml
+++ b/clinical_safety_prompts/03_post_market_safety_signal_trending.prompt.yaml
@@ -12,5 +12,12 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: >
+      Complaints of rash increased from 2 to 8 between Q1 and Q2 2024.
+    expected: |-
+      Post-Market Safety Signal Trending: Rash complaints increased fourfold from Q1 to Q2 2024.
+evaluators:
+  - name: Output starts with 'Post-Market Safety Signal Trending'
+    string:
+      startsWith: 'Post-Market Safety Signal Trending'
