--- a/clinical_research_manager_prompts/02_digest_regulatory_updates.prompt.yaml
+++ b/clinical_research_manager_prompts/02_digest_regulatory_updates.prompt.yaml
@@ -1,7 +1,7 @@
 ---
 name: Digest the Latest Regulatory Updates Affecting My Protocol
-description: Summarize June 2025 FDA e-source guidance changes affecting 
-  protocol ABC-123, flagging mandatory versus recommended items and mapping to 
+description: Summarize June 2025 FDA e-source guidance changes affecting
+  protocol ABC-123, flagging mandatory versus recommended items and mapping to
   protocol sections.
 model: gpt-4
 modelParameters:
@@ -21,5 +21,13 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: Please summarize key updates.
+    expected: Immediate Actions
+evaluators:
+  - name: Contains 'Immediate Actions' heading
+    string:
+      contains: 'Immediate Actions'
+  - name: Contains 'Monitor for Clarification' heading
+    string:
+      contains: 'Monitor for Clarification'
