--- a/clinical_research_manager_prompts/03_portfolio_kpi_dashboard_brief.prompt.yaml
+++ b/clinical_research_manager_prompts/03_portfolio_kpi_dashboard_brief.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Portfolio KPI Dashboard Brief
-description: Produce a one-page executive dashboard of enrollment, deviation, 
+description: Produce a one-page executive dashboard of enrollment, deviation,
   SDV, and budget KPIs for live studies.
 model: gpt-4
 modelParameters:
@@ -21,5 +21,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: Dashboard request acknowledged.
+    expected: XYZ-01
+evaluators:
+  - name: Mentions study ID
+    string:
+      contains: 'XYZ-01'
