--- a/clinical_prompts/03_cdash_mapping_completion_guide.prompt.yaml
+++ b/clinical_prompts/03_cdash_mapping_completion_guide.prompt.yaml
@@ -15,5 +15,13 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |
+      HEIGHT
+    expected: |
+      Variable | Domain | Instruction | Terminology/Units | Edit-Check
+      HEIGHT | DM.HEIGHT | Record height in cm | cm | 30-250
+evaluators:
+  - name: Output should start with CSV header
+    string:
+      startsWith: 'Variable | Domain | Instruction'
