--- a/business_development_prompts/02_rfp_executive_summary_generator.prompt.yaml
+++ b/business_development_prompts/02_rfp_executive_summary_generator.prompt.yaml
@@ -30,4 +30,8 @@ testData:
       rfp_synopsis: example_rfp_synopsis
     expected: |-
       Single markdown section with concise paragraphs and bullet points as needed.
-evaluators: []
+
+evaluators:
+  - name: Includes bullet points
+    string:
+      contains: "- "
