Add evaluators to chemical characterization prompts

--- a/chemical_characterization_prompts/01_design_the_study.prompt.yaml
+++ b/chemical_characterization_prompts/01_design_the_study.prompt.yaml
@@ -28,4 +28,7 @@ testData:
   - input: ''
     expected: |-
       Completion follows instructions.
-evaluators: []
+evaluators:
+  - name: Output starts with a numbered list
+    string:
+      startsWith: '1.'
