--- a/chemical_characterization_prompts/02_interpret_the_chemistry_assess_risk.prompt.yaml
+++ b/chemical_characterization_prompts/02_interpret_the_chemistry_assess_risk.prompt.yaml
@@ -31,4 +31,7 @@ testData:
   - input: ''
     expected: |-
       Completion follows instructions.
-evaluators: []
+evaluators:
+  - name: Output starts with a markdown table
+    string:
+      startsWith: '|'
