Clarify evaluator naming in CFO prompts

--- a/cfo_prompts/01_scenario_cash_flow_forecast.prompt.yaml
+++ b/cfo_prompts/01_scenario_cash_flow_forecast.prompt.yaml
@@ -28,6 +28,6 @@ testData:
       notes: none
     expected: Scenario Forecast -
 evaluators:
-  - name: Output starts with 'Scenario Forecast -'
+  - name: Output should start with 'Scenario Forecast -'
     string:
       startsWith: 'Scenario Forecast -'
