Add evaluators for reverse brainstorming prompt

--- a/brainstorming_prompts/01_reverse_brainstorming.prompt.yaml
+++ b/brainstorming_prompts/01_reverse_brainstorming.prompt.yaml
@@ -25,4 +25,10 @@ testData:
       problem: example_problem
     expected: |-
       Bulleted list plus markdown table.
-evaluators: []
+evaluators:
+  - name: Output includes '➜' bullet prefix
+    string:
+      contains: '➜'
+  - name: Output includes Solution | Impact table header
+    string:
+      contains: 'Solution | Impact'
